--- a/style.css
+++ b/style.css
@@ -95,3 +95,85 @@ section{
 .half-one h2{
     margin-bottom: 102px;
 }
+
+
+                      /* section 3 */
+
+
+
+.three{
+    text-align: center;
+    margin-left: 464px;
+    margin-top: 50px;
+}
+
+.three h1{
+    font-size: 50px;  
+    color: gray;
+}
+.three p{
+    font-size: 27px;
+    text-align: center;
+    color: gray;
+}
+
+
+                     /* section 4 */
+
+ .four div{
+    width: 74%;
+    background: white;
+    padding: 0px;
+    float: left;
+    text-align: center;
+    margin: 51px 107px;
+    border-radius: 33px;
+    cursor: pointer;
+    box-shadow: 10px 10px 40px gray;
+ }    
+ .four img{
+    width: 87%;
+    text-align: center;
+    border-radius: 30px;
+    margin-top: 27px
+ }   
+ 
+ #lunch-photo{
+     height: 53%;
+ }
+
+ .four h2,p{
+    font-weight: 600;
+    text-align: left;
+    padding-left: 29px;
+ }
+
+ .four p{
+     font-weight: 500 !important;
+     font-size: 21px;
+ }
+
+
+
+              /* footer */
+
+footer{
+    background: black;
+    text-align: center;
+    text-transform: uppercase;
+}  
+
+footer span{
+    color: mediumvioletred;
+}
+
+footer p{
+    color: mintcream;
+    padding-bottom:150px;
+    text-align: center;
+    font-weight: 400;
+}
+footer h3{
+    padding-top: 55px;
+    font-weight: 700;
+}
